--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="header">
       <div class="header-left">
-        <img class="weather-icon large" src="icons/sun.svg" data-current-icon />
+        <img class="weather-icon large" src="icon/sun.svg" data-current-icon />
         <div class="header-current-temp">
           <span data-current-temp>31</span>&deg;
         </div>
@@ -40,7 +40,45 @@
       </div>
 
     </header>
+    <section class="day-section" data-day-section>
+      <div class="day-card">
+        <img src="" class="weather-icon"/>
+        <div class="day-card-day">Monday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="" class="weather-icon"/>
+        <div class="day-card-day">Tuesday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="" class="weather-icon"/>
+        <div class="day-card-day">Wednesday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="" class="weather-icon"/>
+        <div class="day-card-day">Thursday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="" class="weather-icon"/>
+        <div class="day-card-day">Friday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="" class="weather-icon"/>
+        <div class="day-card-day">Saturday</div>
+        <div>32&deg;</div>
+      </div>
+      <div class="day-card">
+        <img src="" class="weather-icon"/>
+        <div class="day-card-day">Sunday</div>
+        <div>32&deg;</div>
+      </div>
+    </section>
 
+    <template></template>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
