Add rest of the SVG files for different conditions

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
           <td>
             <div class="info-group">
               <div class="label">Wind</div>
-              <div>26</div>
+              <div>26<span class="value-sub-info">mph</span></div>
             </div>
           </td>
           <td>
             <div class="info-group">
               <div class="label">Precip</div>
-              <div>0 in</div>
+              <div>0<span class="value-sub-info">in</span></div>
             </div>
           </td>
         </tr>
