--- a/index.html
+++ b/index.html
@@ -42,37 +42,37 @@
     </header>
     <section class="day-section" data-day-section>
       <div class="day-card">
-        <img src="" class="weather-icon"/>
+        <img src="/icon/cloud.svg" class="weather-icon"/>
         <div class="day-card-day">Monday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="" class="weather-icon"/>
+        <img src="/icon/cloud.svg" class="weather-icon"/>
         <div class="day-card-day">Tuesday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="" class="weather-icon"/>
+        <img src="/icon/cloud.svg" class="weather-icon"/>
         <div class="day-card-day">Wednesday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="" class="weather-icon"/>
+        <img src="/icon/cloud.svg" class="weather-icon"/>
         <div class="day-card-day">Thursday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="" class="weather-icon"/>
+        <img src="/icon/cloud.svg" class="weather-icon"/>
         <div class="day-card-day">Friday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="" class="weather-icon"/>
+        <img src="/icon/cloud.svg" class="weather-icon"/>
         <div class="day-card-day">Saturday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="" class="weather-icon"/>
+        <img src="/icon/cloud.svg" class="weather-icon"/>
         <div class="day-card-day">Sunday</div>
         <div>32&deg;</div>
       </div>
@@ -88,7 +88,7 @@
             </div>
           </td>
           <td>
-            <img class="weather-icon" src="icon/cloud.svg" />
+            <img class="weather-icon" src="/icon/cloud.svg" />
           </td>
           <td>
             <div class="info-group">
