--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body class="blurred">
     <header class="header">
       <div class="header-left">
-        <img class="weather-icon large" src="icon/sun.svg" data-current-icon />
+        <img class="weather-icon large" src="icons/sun.svg" data-current-icon />
         <div class="header-current-temp">
           <span data-current-temp>31</span>&deg;
         </div>
@@ -23,7 +23,10 @@
         </div>
         <div class="info-group">
           <div class="label">Wind</div>
-          <div><span data-current-wind>9</span><span class="value-sub-info">mph</span></div>
+          <div>
+            <span data-current-wind>9</span
+            ><span class="value-sub-info">mph</span>
+          </div>
         </div>
         <div class="info-group">
           <div class="label">Low</div>
@@ -35,44 +38,47 @@
         </div>
         <div class="info-group">
           <div class="label">Precip</div>
-          <div><span data-current-precip>0.1</span><span class="value-sub-info">in</span></div>
+          <div>
+            <span data-current-precip>0.1</span
+            ><span class="value-sub-info">in</span>
+          </div>
         </div>
       </div>
-
     </header>
+
     <section class="day-section" data-day-section>
       <div class="day-card">
-        <img src="/icon/cloud.svg" class="weather-icon"/>
+        <img src="icons/cloud.svg" class="weather-icon" />
         <div class="day-card-day">Monday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="/icon/cloud.svg" class="weather-icon"/>
+        <img src="icons/cloud.svg" class="weather-icon" />
         <div class="day-card-day">Tuesday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="/icon/cloud.svg" class="weather-icon"/>
+        <img src="icons/cloud.svg" class="weather-icon" />
         <div class="day-card-day">Wednesday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="/icon/cloud.svg" class="weather-icon"/>
+        <img src="icons/cloud.svg" class="weather-icon" />
         <div class="day-card-day">Thursday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="/icon/cloud.svg" class="weather-icon"/>
+        <img src="icons/cloud.svg" class="weather-icon" />
         <div class="day-card-day">Friday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="/icon/cloud.svg" class="weather-icon"/>
+        <img src="icons/cloud.svg" class="weather-icon" />
         <div class="day-card-day">Saturday</div>
         <div>32&deg;</div>
       </div>
       <div class="day-card">
-        <img src="/icon/cloud.svg" class="weather-icon"/>
+        <img src="icons/cloud.svg" class="weather-icon" />
         <div class="day-card-day">Sunday</div>
         <div>32&deg;</div>
       </div>
@@ -88,7 +94,7 @@
             </div>
           </td>
           <td>
-            <img class="weather-icon" src="/icon/cloud.svg" />
+            <img src="icons/cloud.svg" class="weather-icon" />
           </td>
           <td>
             <div class="info-group">
@@ -115,7 +121,321 @@
             </div>
           </td>
         </tr>
-
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Thursday</div>
+              <div>4 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Temp</div>
+              <div>31&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">FL Temp</div>
+              <div>25&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Wind</div>
+              <div>26<span class="value-sub-info">mph</span></div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Precip</div>
+              <div>0<span class="value-sub-info">in</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Thursday</div>
+              <div>5 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Temp</div>
+              <div>31&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">FL Temp</div>
+              <div>25&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Wind</div>
+              <div>26<span class="value-sub-info">mph</span></div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Precip</div>
+              <div>0<span class="value-sub-info">in</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Thursday</div>
+              <div>6 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Temp</div>
+              <div>31&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">FL Temp</div>
+              <div>25&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Wind</div>
+              <div>26<span class="value-sub-info">mph</span></div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Precip</div>
+              <div>0<span class="value-sub-info">in</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Thursday</div>
+              <div>7 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Temp</div>
+              <div>31&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">FL Temp</div>
+              <div>25&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Wind</div>
+              <div>26<span class="value-sub-info">mph</span></div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Precip</div>
+              <div>0<span class="value-sub-info">in</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Thursday</div>
+              <div>8 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Temp</div>
+              <div>31&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">FL Temp</div>
+              <div>25&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Wind</div>
+              <div>26<span class="value-sub-info">mph</span></div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Precip</div>
+              <div>0<span class="value-sub-info">in</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Thursday</div>
+              <div>9 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Temp</div>
+              <div>31&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">FL Temp</div>
+              <div>25&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Wind</div>
+              <div>26<span class="value-sub-info">mph</span></div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Precip</div>
+              <div>0<span class="value-sub-info">in</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Thursday</div>
+              <div>10 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Temp</div>
+              <div>31&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">FL Temp</div>
+              <div>25&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Wind</div>
+              <div>26<span class="value-sub-info">mph</span></div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Precip</div>
+              <div>0<span class="value-sub-info">in</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Thursday</div>
+              <div>11 PM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Temp</div>
+              <div>31&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">FL Temp</div>
+              <div>25&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Wind</div>
+              <div>26<span class="value-sub-info">mph</span></div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Precip</div>
+              <div>0<span class="value-sub-info">in</span></div>
+            </div>
+          </td>
+        </tr>
+        <tr class="hour-row">
+          <td>
+            <div class="info-group">
+              <div class="label">Thursday</div>
+              <div>12 AM</div>
+            </div>
+          </td>
+          <td>
+            <img src="icons/cloud.svg" class="weather-icon" />
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Temp</div>
+              <div>31&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">FL Temp</div>
+              <div>25&deg;</div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Wind</div>
+              <div>26<span class="value-sub-info">mph</span></div>
+            </div>
+          </td>
+          <td>
+            <div class="info-group">
+              <div class="label">Precip</div>
+              <div>0<span class="value-sub-info">in</span></div>
+            </div>
+          </td>
+        </tr>
       </tbody>
     </table>
 
@@ -136,7 +456,7 @@
           </div>
         </td>
         <td>
-          <img class="weather-icon" data-icon />
+          <img data-icon class="weather-icon" />
         </td>
         <td>
           <div class="info-group">
@@ -162,7 +482,8 @@
           <div class="info-group">
             <div class="label">Precip</div>
             <div>
-              <span data=precip></span><span class="value-sub-info">in</span></div>
+              <span data-precip></span><span class="value-sub-info">in</span>
+            </div>
           </div>
         </td>
       </tr>
